# actionguard

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_quickstart.py  02_policy_threshold.py  03_slack_approval.py  04_any_function.py
src/actionguard/: __init__.py  audit.py  core.py  function.py  langchain.py  policy.py
src/actionguard/channels/: __init__.py  base.py  cli.py  slack.py
tests/: conftest.py  test_channels.py  test_core.py  test_function.py  test_langchain.py  test_policy.py
